# for_homework

./: .env.example  README.md  main.py  pyproject.toml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_generators_py.html  z_145eef247bfb46b6_masks_py.html  z_145eef247bfb46b6_processing_py.html  z_145eef247bfb46b6_widget_py.html
src/: decorators.py  external_api  external_api.py  generators.py  interface.py  masks.py  processing.py  utils.py  widget.py
src/widget_bank/: masks.py  processing.py  widget.py
tests/: conftest.py  test_decorators.py  test_external_api.py  test_generators.py  test_interface.py  test_masks.py  test_processing.py  test_utils.py  test_widget.py
